panama example